refactor: refactora classes para evitar bugs